--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -38,3 +38,24 @@ body {
 .cover {
   object-fit: cover;
 }
+
+.overlay {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  opacity: 0.5;
+  z-index: 1;
+}
+
+.portal-modal {
+  position: fixed;
+  top: 50%;
+  right: 50%;
+  transform: translate(50%, -50%);
+  width: 800px;
+  max-width: 90%;
+  z-index: 2;
+}
